--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,7 @@
+.page_body{
+    display: flex;
+}
+
 .square_container{
     width: 100%;
     height: 280px;
@@ -101,4 +105,26 @@
     align-items:center;
     text-align: center;
     color: white;
+}
+
+.searchWrapper{
+    background: white;
+    padding: 20px;
+}
+
+@media screen and (min-width:768px){
+
+    .body_wrapper{
+        width: calc(100% - 55px);
+        background: #F5F5FB;
+    }
+    .body_container{
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .searchWrapper{
+        display:none;
+    }
 }
