--- a/src/components/SearchInput/styles.module.css
+++ b/src/components/SearchInput/styles.module.css
@@ -1,6 +1,5 @@
 .search_container{
     width: 100%;
-    padding: 20px;
     background: #ffffff;
     display: flex;
     justify-content: center;
@@ -22,4 +21,9 @@
     width: 100%;
     border: none;
     background-color: transparent;
+    outline: none;
+}
+
+@media screen and (min-width:768px){
+
 }
