--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -127,4 +127,44 @@
     .searchWrapper{
         display:none;
     }
+
+    /* section one */
+
+    .square_container{
+        height: 150px;
+    }
+
+    .info_container{
+        display: flex;
+        transform: translateY(0px);
+        height: 270px;
+
+    }
+
+    .img_container{
+        width: 500px;
+        transform: translateY(-67px);
+        object-fit: cover;
+    }
+
+    .text_first_section{
+        width: 100%;
+        height: 150px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align:left;
+        padding: 0px;
+        font-size: 3em;
+        color:white;
+    }
+
+    .text_first_section small{
+        font-size: 0.6em;
+    }
+
+    /* section two */
+
+    
+
 }
