--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,4 @@
-.page_body{
-    display: flex;
-}
+
 
 .square_container{
     width: 100%;
@@ -95,16 +93,21 @@
 .confirm_acount_warning{
     width: 100%;
     /* height: 120px; */
-    padding: 10px 5px;
+    padding: 25px 5px;
     border-radius: 6px;
     background-image: url("/images/confirmAcount.png");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     text-align: center;
     color: white;
+}
+
+.confirm_acount_warning p{
+    margin:0;
 }
 
 .searchWrapper{
@@ -113,6 +116,10 @@
 }
 
 @media screen and (min-width:768px){
+
+    .page_body{
+        display: flex;
+    }
 
     .body_wrapper{
         width: calc(100% - 55px);
@@ -165,6 +172,66 @@
 
     /* section two */
 
-    
+    .event_section_container{
+        display: flex;
+    }
 
+    .slider_container{
+        width: 150%;
+        max-width: 800px;
+    }
+
+    .slider_txt{
+        display: flex;
+        padding: 0 40px;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 2em;
+        color:white;
+        height: 100%;
+        width: 100%;
+        top: 0px;
+    }
+    
+    .events_container{
+        /* width: 20%; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .progressBar_progress_confirm_container{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        padding: 30px 0px 40px 20px;
+    }
+
+    .progressBar_progress_confirm_container > section:first-child{
+        width: 35%;
+        border-radius: 12px;
+    }
+
+    .progressItems_container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .confirm_acount_warning{
+        display:flex;
+        flex-direction: row;
+    }
+
+    .progress_confirm_right{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .confirm_acount_warning_wrapper{
+        padding: 30px;
+        padding-bottom: 0px;
+    }
+    
 }
