--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -47,6 +47,24 @@
     display: none;
 }
 
+.notifications_container_row{
+    position: absolute;
+    top: -10px;
+    right: 50px;
+    background-color: white;
+    height: 25px;
+    width: 25px;
+    transform: rotate(45deg);
+}
+
+.notifications_container{
+    position: absolute;
+    top: 70px;
+    right: -50px;
+    border-radius: 6px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* overflow: hidden; */
+}
 
 @media screen and (min-width:768px){
 
@@ -80,6 +98,7 @@
     }
 
     .icon_container{
+        cursor:pointer;
         position: relative;
         height: 25px;
         width: 25px;
