--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -82,7 +82,7 @@
 
     .search_container{
         width: 100%;
-        max-width: 550px;
+        max-width: 850px;
     }
 
     .add_btn{
@@ -94,7 +94,7 @@
         padding: 25px 20px;
         display: flex;
         align-items: center;
-        margin: 0 20px 0 10px;
+        margin: 0 40px 0 10px;
     }
 
     .icon_container{
@@ -120,6 +120,9 @@
         align-items: center;
         width: max-content;
         margin: 0;
+        font-family: var(--regular-font);
+        font-weight: bold;
+        color:gray;
     }
 
     .icon_profile{
