--- a/src/components/EventsToday/styles.module.css
+++ b/src/components/EventsToday/styles.module.css
@@ -4,6 +4,7 @@
     width: 154px;
     margin: 5px;
     border-radius: 6px;
+    font-family: var(--Nunito-Bold-font);
 }
 
 .image_container{
@@ -17,7 +18,7 @@
 }
 
 .event_hour{
-    color: rgb(202, 202, 202);
+    color: rgb(157, 157, 157);
 }
 
 .event_tittle{
@@ -28,5 +29,17 @@
     .event_container{
         display: flex;
         width: 100%;
+    }
+
+    .event_hour_tittle_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 1.2em;
+    }
+
+    .event_tittle{
+        width: 100%;
+        min-width: fit-content;
     }
 }
