--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -24,6 +24,7 @@
     padding: 10px 30px;
     font-size: 2em;
     color:white;
+    font-family: var(--Gotham-Medium-font);
 }
 
 .slider_container{
@@ -49,6 +50,8 @@
     top: 60px;
     z-index: 1;
     padding: 0 10px;
+    font-family: var(--Gotham-Medium-font);
+
 }
 .slider_txt h2{
     font-size: 1.3em;
@@ -162,7 +165,7 @@
         justify-content: center;
         text-align:left;
         padding: 0px;
-        font-size: 3em;
+        font-size: 2.5em;
         color:white;
     }
 
@@ -208,14 +211,15 @@
     }
 
     .progressBar_progress_confirm_container > section:first-child{
-        width: 35%;
+        width: 45%;
         border-radius: 12px;
     }
 
     .progressItems_container{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
+        gap: 20px 30px;
     }
 
     .confirm_acount_warning{
@@ -227,6 +231,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin-left: 50px;
     }
 
     .confirm_acount_warning_wrapper{
