--- a/src/components/ProgressBar/styles.module.css
+++ b/src/components/ProgressBar/styles.module.css
@@ -37,7 +37,7 @@
     width: 120px;
     border-radius: 50%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items:center;
     padding-left: 20px;
 }
